Rename username for PAP operations.
Use an account other than healthcheck in PAP for provisioning of policies.

Issue-ID: POLICY-2744
Change-Id: I897f7a4fffbac2d4bbd9cceb059bae1794753aa7
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>